test/features/errors/semantic/e1075_discriminant_overflow.spl
# E1075: Discriminant Overflow

Feature: E1075 - Enum Discriminant Overflow
  As a Simple compiler
  I want to detect enum discriminant overflow
  So that discriminant values stay within bounds

  Background:
    Given I have the Simple compiler

  Scenario: Discriminant overflow
    When I compile:
      '''
      #[repr(u8)]
      enum Status:
        A = 255
        B  # Error: overflow, would be 256
      '''
    Then I should see error E1075 at line 4
    And the error message should be "enum discriminant overflow"
    And the label should indicate "discriminant too large"
    And the help should suggest "reduce discriminant values or use explicit values"

  Scenario: Valid discriminant values
    When I compile:
      '''
      #[repr(u8)]
      enum Status:
        A = 0
        B = 1
        C = 2
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      #[repr(u8)]
      enum Status:
        A = 255
        B
      '''
    Then I should see error E1075
    And the error message should contain "판별자 오버플로"
